2005-04-09  Michael Peppler  <mpeppler@peppler.org>

	* src/cmd_connect.c (check_opt_capability): Add this function 
	to check for ct_option() capability.

	* src/var.h: Change "chained" to default to NULL.

2004-12-08  Michael Peppler  <mpeppler@peppler.org>

	* src/var_passwd.c (var_set_password): Add a check for NULL 
	string (requested by Helmut Ruholl)

2004-11-09  Michael Peppler  <mpeppler@peppler.org>

	* src/cmd_bcp.c (cmd_bcp): Add support for BLK_VERSION_150.

	* src/cmd_connect.c (cmd_connect): Add support for CS_VERSION_150.

	* src/sqsh_compat.c (sqsh_getinput): Set the interrupted flag
	if user hits ^D.

2004-11-08  Michael Peppler  <mpeppler@peppler.org>

	* aclocal.m4 (AC_SYBASE_ASE): Change library search code to
	also look for libsybxxx.a and lib[syb]xxx64.a libraries.

2004-11-05  Michael Peppler  <mpeppler@peppler.org>

	* src/sqsh_main.c (main): Don't set "width" to the terminal 
	width if it has been set via the .sqshrc file.

	* src/cmd_connect.c (cmd_connect): Change sprintf() to strncpy()
	to avoid possible buffer overflow problem.

	* src/dsp_desc.c (dsp_desc_bind): Comment out code to limit 
	datafmt.maxlength to the column display max len. Avoids "bind
	resulted in truncation" errors for text/image/varchar/varbinary
	columns at the expense of disrupting the columnar display.

	* src/cmd_read.c (cmd_read): Use ctermid() to get the name of the
	controlling terminal.

2004-11-04  Michael Peppler  <mpeppler@peppler.org>

	* src/sqsh_expand.c (expand_skip_comment): Fix bug 1046570
	segv if a go is first on a line within a comment.

	* src/cmd_connect.c (cmd_connect): First try at implementing 
	optionally setting "chained" mode on connect.

	* aclocal.m4 (AC_SYBASE_ASE): Change the order of the libraries
	so that static linking will work.

	* src/cmd_read.c (cmd_read): Add check to make sure that
	we read data from the terminal in all cases. This means
	checking sqsh_stdin_isatty() and possibly opening /dev/tty