@@ -31,7 +31,7 @@
 
 /*-- Current Version --*/
 #if !defined(lint) && !defined(__LINT__)
-static char RCS_Id[] = "$Id: dsp.c,v 1.1.1.1 2001/10/23 20:31:06 gray Exp $";
+static char RCS_Id[] = "$Id: dsp.c,v 1.1.1.1 2004/04/07 12:35:01 chunkm0nkey Exp $";
 USE(RCS_Id)
 #endif /* !defined(lint) */
 
@@ -74,6 +74,8 @@ dsp_prop_t  g_dsp_props = {
 	1,               /* p_bcp_rowsep_len */
 	1,               /* p_bcp_trim */
 	8192,            /* p_maxlen */
+	",",             /* p_csv_colsep */
+	1,               /* p_csv_colsep_len */
 };
 
 /*-- Prototypes --*/
@@ -216,6 +218,9 @@ int dsp_cmd( output, cmd, sql, flags )
 					break;
 				case DSP_NONE:
 					dsp_func = dsp_none;
+					break;
+				case DSP_CSV:
+					dsp_func = dsp_csv;
 					break;
 				default:
 					dsp_func = dsp_html;
